--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/rangkotodotcom/node-simanang-api#readme",
   "dependencies": {
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "chai": "^5.1.1",
